# sample-shopfloor-connectivity-agentic

./: .env.template  .gitignore  AGENT_UI_EXPLANATION.md  ARCHITECTURE_DIAGRAM.md  README.md  example.json  my_example.json  pyproject.toml
.github/workflows/: main.yml
agents/sfc_wizard_agent/: .gitignore  README.md  UI_README.md  pyproject.toml  run-ui.bat  run.bat  sfc-config-example.json
agents/sfc_wizard_agent/scripts/: init.bat  init.sh  lint.sh  run-ui.bat  run-ui.sh  run.bat
agents/sfc_wizard_agent/sfc_wizard/: agent.py  ui.py
agents/sfc_wizard_agent/sfc_wizard/html/: chat.html
agents/sfc_wizard_agent/sfc_wizard/html/assets/: script.js  styles.css
agents/sfc_wizard_agent/sfc_wizard/templates/: chat.html
agents/sfc_wizard_agent/sfc_wizard/tools/: config_generator.py  config_validator.py  data_visualizer.py  diagnostics.py  file_operations.py  folder_operations.py  log_operations.py  prompt_logger.py  sfc_knowledge.py  sfc_runner.py  sfc_visualization.py
mcp-servers/sfc-spec-server/: README.md  pyproject.toml
mcp-servers/sfc-spec-server/scripts/: init.sh  lint.sh  run.sh
mcp-servers/sfc-spec-server/sfc_spec/: server.py
mcp-servers/sfc-spec-server/sfc_spec/tools/: sfc_knowledge.py
sample_sfc_agent/: __init__.py  restricted_agent.py  sfc_wizard_agent.py
scripts/: lint.sh  run.sh  test.sh
src/agents/: __init__.py  sfc_wizard_agent.py
src/agents/sfc_wizard_agent/: README.md  pyproject.toml
src/agents/sfc_wizard_agent/scripts/: init.sh  lint.sh  run.sh  test.sh
src/agents/sfc_wizard_agent/sfc_wizard/: agent.py
src/agents/sfc_wizard_agent/sfc_wizard/tools/: folder_operations.py  log_operations.py  sfc_explanations.py  sfc_knowledge.py  sfc_module_analyzer.py  sfc_runner.py  sfc_visualization.py
src/agents/sfc_wizard_agent/tools/: config_generator.py  config_validator.py  sfc_knowledge.py  sfc_module_analyzer.py  sfc_runner.py  sfc_visualization.py
src/mcp/: README.md
src/mcp-servers/sfc-spec-server/: .gitignore  README.md  pyproject.toml
src/mcp-servers/sfc-spec-server/scripts/: lint.sh  run.sh  test.sh
src/mcp-servers/sfc-spec-server/sfc_spec/: server.py
src/mcp/sfc-spec-server/: .fastmcp.yaml  README.md  pyproject.toml  server.py  test_server.py
src/mcp/sfc-spec-server/scripts/: lint.sh  run.sh  test.sh
src/mcp/sfc-spec-server/sfc_spec/: server.py
src/tools/: __init__.py  config_generator.py  data_visualizer.py  diagnostics.py  file_operations.py  folder_operations.py  log_operations.py  sfc_explanations.py  sfc_runner.py  sfc_visualization.py
