[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-sfc-agent"
version = "0.1.0"
description = "Restricted agent with SFC wizard capabilities"
authors = [
    {name = "Gezim Musliaj", email = "gmuslia@amazon.de"},
    {name = "Hubert Asamer", email = "asamerh@amazon.de"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "python-dotenv",
    "black",
    "jmespath",
    "fastmcp>=2.10.4",
    "markdown>=3.8.2",
]

[project.scripts]
agent = "src.agents.sfc_wizard_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []
