[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfc-spec-server"
version = "0.1.0"
description = "SFC Documentation Specification MCP Server"
authors = [
    {name = "Gezim Musliaj", email = "gmuslia@amazon.de"},
    {name = "Hubert Asamer", email = "asamerh@amazon.de"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.4",
    "black>=25.1.0",
]
keywords = ["mcp", "server", "sfc", "spec", "documentation"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.1.2",
    "black>=25.1.0",
]

[project.scripts]
sfc_spec = "sfc_spec.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfc_spec*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
]

[project.urls]
Homepage = "https://aws.amazon.com/blogs/industries/collecting-data-from-industrial-devices-to-aws-services/"
Repository = "https://github.com/aws-samples/sample-shopfloor-connectivity-agentic"
